--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: MySpace
+email: yangkl16@mails.tsinghua.edu.cn
 baseurl: "" # the subpath of your site, e.g. /blog
 #url: "http://yourdomain.com" # the base hostname & protocol for your site
 
@@ -8,9 +8,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 description: One sentence introducing yourself or what you do
 
 # Social icons
-facebook: username
-linkedin: username
-github: username
+facebook: 杨昆霖
+linkedin: 杨昆霖
+github: Youngkl0726
 deviantart: username
 codepen: username
 
